--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "ajv": "^8.17.1",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "swagger-ui-express": "^5.0.1"
   }
