--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ajv": "^8.17.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "JSONStream": "^1.3.5",
     "swagger-ui-express": "^5.0.1"
   }
 }
